# CupHolderMusic

./: CMakeLists.txt  README.md  database.cpp  database.h  libraryscanner.cpp  libraryscanner.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
audiobackends/: audiobackend.h  libvlcbackend.cpp  libvlcbackend.h  queuing.cpp  queuing.h
models/: album.h  track.h
popups/: albuminfo.cpp  albuminfo.h  tags.cpp  tags.h
resources/: cupholdermusic.desktop
views/: albumcard.cpp  albumcard.h  albumview.cpp  albumview.h  libraryview.cpp  libraryview.h
